--- a/fileindexer-index/Dockerfile
+++ b/fileindexer-index/Dockerfile
@@ -1,6 +1,1 @@
-FROM mysql:8.0
-
-LABEL maintainer="Mac Urax"
-
-COPY mysql.cnf /etc/mysql/conf.d/
-COPY setup.sql /docker-entrypoint-initdb.d/
+FROM cassandra:4.1.1
