--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,34 @@
 # HOW-TO:
 #
 # docker compose  create
-# docker compose run -d uraxapp
-# docker compose stop uraxapp
+# docker compose run -d fileindexer
+# docker compose stop fileindexer
 #
 services:
-  fileindexer:
-    build: ./urax-app
+  fileindexerapp:
+    build: ./fileindexer-app
     depends_on:
-      - cassandra
+      - fileindexerindex
     links:
-      - cassandra
+      - fileindexerindex
     ports:
       - "8080:8080"
     networks:
       - fileindexer-network
 
-  uraxreverseproxy:
-    build: ./urax-reverse-proxy
+  fileindexerreverseproxy:
+    build: ./fileindexer-reverse-proxy
     networks:
-      - urax-network
+      - fileindexer-network
     ports:
       - "8081:80"
 
-  cassandra:
-    image: cassandra:4.0.7
-      healthcheck:
-      test: [ "CMD-SHELL", "[ $$(nodetool statusgossip) = running ]" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-volumes:  
-  uraxdbdata:
+  fileindexerindex:
+    image: cassandra:4.1.1
+    networks:
+      - fileindexer-network
+    ports:
+      - "9042:9042"
 
 networks:
   fileindexer-network: {}
