--- a/fileindexer-app/Dockerfile
+++ b/fileindexer-app/Dockerfile
@@ -2,6 +2,6 @@ FROM eclipse-temurin:19
 
 RUN mkdir /opt/app
 
-COPY build/libs/urax-0.0.1-SNAPSHOT.jar /opt/app
-CMD ["java", "-jar", "/opt/app/urax-0.0.1-SNAPSHOT.jar"]
+COPY target/blorksandbox-0.0.1-SNAPSHOT.jar /opt/app
+CMD ["java", "-jar", "/opt/app/blorksandbox-0.0.1-SNAPSHOT.jar"]
 
