--- a/fileindexer-app/src/main/resources/application.properties
+++ b/fileindexer-app/src/main/resources/application.properties
@@ -5,9 +5,16 @@ logging.level.root=WARN
 logging.level.org.se.mac=TRACE
 
 # CASSANDRA INDEX
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-spring.data.cassandra.request.timeout=10s
-spring.data.cassandra.connection.connect-timeout=10s
-spring.data.cassandra.connection.init-query-timeout=10s
-spring.data.cassandra.local-datacenter=blorkcenter
-spring.data.cassandra.keyspace-name=cassandra_fileindexer
+spring.cassandra.keyspace-name=fileindexer_cassandra
+spring.cassandra.keyspace-action=CREATE_DROP
+#spring.cassandra.schema-action=CREATE_DROP
+spring.cassandra.local-datacenter=datacenter1
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.request.timeout=10s
+spring.cassandra.connection.connect-timeout=10s
+spring.cassandra.connection.init-query-timeout=10s
+
+#spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+#spring.data.cassandra.contact-points=fileindexerindex
+#spring.data.cassandra.local-datacenter=blorkcenter
