--- a/fileindexer-app/src/main/resources/application.properties
+++ b/fileindexer-app/src/main/resources/application.properties
@@ -5,13 +5,15 @@ logging.level.root=WARN
 logging.level.org.se.mac=TRACE
 
 # CASSANDRA INDEX
-spring.cassandra.keyspace-name=fileindexer_cassandra
-spring.cassandra.keyspace-action=CREATE_DROP
-spring.cassandra.local-datacenter=datacenter1
-spring.cassandra.contact-points=fileindexerindex
-spring.cassandra.port=9042
-spring.cassandra.request.timeout=10s
-spring.cassandra.connection.connect-timeout=10s
-spring.cassandra.connection.init-query-timeout=10s
+spring.data.cassandra.keyspace-name=fileindexer_cassandra
+spring.data.cassandra.keyspace-action=RECREATE
+spring.data.cassandra.contact-points=localhost
+
+#spring.cassandra.port=9042
+#spring.cassandra.request.timeout=10s
+#spring.cassandra.connection.connect-timeout=10s
+#spring.cassandra.connection.init-query-timeout=10s
+
+#spring.data.cassandra.local-datacenter=datacenter1
 
 
