--- a/fileindexer-app/src/main/resources/application.properties
+++ b/fileindexer-app/src/main/resources/application.properties
@@ -7,8 +7,8 @@ logging.level.org.se.mac=TRACE
 # CASSANDRA INDEX
 spring.data.cassandra.keyspace-name=fileindexer_cassandra
 spring.data.cassandra.keyspace-action=RECREATE
-#spring.data.cassandra.contact-points=fileindexerindex
-spring.data.cassandra.contact-points=localhost:7199
+spring.data.cassandra.contact-points=fileindexerindex
+#spring.data.cassandra.contact-points=localhost
 
 #spring.cassandra.port=9042
 #spring.cassandra.request.timeout=10s
