--- a/fileindexer-reverse-proxy/nginx.conf
+++ b/fileindexer-reverse-proxy/nginx.conf
@@ -6,9 +6,10 @@ server {
   listen 80;
   server_name localhost;
 
-  location / {
-
-    if ($request_method = 'OPTIONS') {
+  location ~/api {
+	
+    
+	if ($request_method = 'OPTIONS') {
       add_header 'Access-Control-Max-Age' 1728000;
       add_header 'Access-Control-Allow-Origin' '*';
       add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent, X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
@@ -22,7 +23,8 @@ server {
     add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent, X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
     add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
-    proxy_pass http://backendapi;
+	set $upstream_app_api http://backendapi;
+    proxy_pass $upstream_app_api;
     proxy_intercept_errors on;
   }
 
