--- a/fileindexer-app/src/main/resources/application.properties
+++ b/fileindexer-app/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.profiles.default=prod
 
+spring.main.banner-mode=off
+
 logging.file.path=logs
 logging.level.root=WARN
 logging.level.org.se.mac=TRACE
